--- a/templates/resume.html
+++ b/templates/resume.html
@@ -11,7 +11,7 @@
                 <div id="edu">
                     <p>University of Washington, Seattle WA</p>
                     <p>Bachelor of Science in Informatics</p>
-                    <p>Cumulative GPA: 3.77</p>
+                    <p>Cumulative GPA: 3.75</p>
                     <p>Expected graduation date: June 2017</p>
                 </div>
             <br>
@@ -117,13 +117,13 @@
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Mobile App Design</strong>"
                         data-content="</em>Grade received: 3.7</em><p>In a small team, create a design language
                         and style guide to design a mobile OS. Learned how to use Sketch to create screens for
-                        each app.</p>">INFO 498A
+                        each app.</p>">INFO 498
                 </a>
 
                 <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>User Experience and
                         Information Architecture</strong>"
-                        data-content="</em>Grade received: TBD</em><p>Introduction to the methodologies utilized to create
+                        data-content="</em>Grade received: 4.0</em><p>Introduction to the methodologies utilized to create
                         a user interface. Discusses user experience (UX), what makes an interface effective, and provides
                          an overview of the tools and theories that are foundational to Information Architecture (IA).
                          Discusses project scoping, wireframes, sitemaps, information design and formulating a UX
@@ -132,7 +132,7 @@
 
                 <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                        data-toggle="popover" data-placement="top" data-html="true" title="<strong>Advanced Database Design,
-                       Management, and Maintenance</strong>" data-content="</em>Grade received: TBD</em><p>Advanced
+                       Management, and Maintenance</strong>" data-content="</em>Grade received: 3.5</em><p>Advanced
                        perspectives on DBMS theory, architecture, and implementation. Conceptual, logical, physical
                        modeling. Index structures, query optimization and performance tuning, relational algebra,
                        transaction processing, and concurrency control. Operational databases, decision support systems,
@@ -142,12 +142,61 @@
 
                 <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
                         data-toggle="popover" data-placement="top" data-html="true" title="<strong>Data Structures and
-                        Algorithms</strong>" data-content="</em>Grade received: TBD</em><p>Fundamental
+                        Algorithms</strong>" data-content="</em>Grade received: 3.5</em><p>Fundamental
                        algorithms and data structures for implementation. Techniques for solving problems by programming.
                         Linked lists, stacks, queues, directed graphs. Trees: representations, traversals. Searching
                         (hashing, binary search trees, multiway trees). Garbage collection, memory management. Internal
                          and external sorting.</p>">CSE 373
                 </a>
+
+                <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                   data-toggle="popover" data-placement="top" data-html="true" title="<strong>Introduction to Data Science
+                   </strong>" data-content="</em>Grade received: 3.5</em><p>Surveys the major topics within data science,
+                   including data ingestion, cloud computing, statistical inference, machine learning, information visualization,
+                   and data ethics. Includes programming in R and Python. </p>">INFO 370
+                </a>
+
+
+                <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                   data-toggle="popover" data-placement="top" data-html="true" title="<strong>Research Methods in Informatics
+           </strong>" data-content="</em>Grade received: 3.9</em><p>Introduction to the research methods used in informatics
+            for understanding technology, information, and human behavior. Methods incorporate those from design, engineering,
+             and social science. Topics include science and invention, research contribution types, research through design,
+              theory, ethics, and qualitative/quantitative empirical methods. </p>">INFO 470
+                </a>
+
+
+                <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                   data-toggle="popover" data-placement="top" data-html="true" title="<strong>Project Management in Informatics
+           </strong>" data-content="</em>Grade received: 3.9</em><p>Introduces project management principles within the
+           context of Informatics. Provides knowledge that managers need to implement information systems on time and
+           within budget. Concentrates on methods and issues in organizing, planning, and controlling projects, and the use
+           of computer-based project management tools. </p>">INFO 481
+                </a>
+
+                <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                   data-toggle="popover" data-placement="top" data-html="true" title="<strong>Information Ethics and Policy
+   </strong>" data-content="</em>Grade received: 3.8</em><p>Provides a framework for analyzing the ethical, legal, economic,
+    and socio-political issues surrounding information, information technologies, and the information industries. Explores
+     policy and ethical issues of information access and control including; intellectual property, file sharing, free speech,
+      privacy, and national security. </p>">INFO 450
+                </a>
+
+                        <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                           data-toggle="popover" data-placement="top" data-html="true" title="<strong>Interactive Information Visualization
+   </strong>" data-content="</em>Grade received: 3.2</em><p>Techniques and theory for visualizing, analyzing, and supporting
+   interaction with structured data like numbers, text, and relations. Provides practical experience designing and
+   building interactive visualizations for the web. Exposes students to cognitive science, statistics, and perceptual psychology.
+   An empirical approach will be used to design and evaluate visualizations.  </p>">INFO 474
+                        </a>
+
+                        <a href="#" tabindex="0" type="button" class="btn btn-default" data-container="body" data-trigger="focus"
+                           data-toggle="popover" data-placement="top" data-html="true" title="<strong>Professionalism in Informatics
+   </strong>" data-content="</em>Grade received: TBD</em><p>Examines professionalism, communication, teamwork, leadership,
+   and interpersonal networking to strengthen students as they seek to excel professionally.
+   Covers developing and presenting business cases and project plans, personal branding, conducting informational interviews,
+   and effective written and oral communication.</p>">INFO 386
+                        </a>
                 </div>
                     <div class="col-lg-4">
                         </div>
@@ -163,7 +212,9 @@
                             <li>HTML5</li>
                             <li>Java</li>
                             <li>JavaScript</li>
-                            <li>PHP</li>
+                            <li>Python</li>
+                            <li>R</li>
+                            <li>D3</li>
                             <li>AngularJS</li>
                             <li>SQL</li>
                         </ul>
@@ -180,14 +231,39 @@
                     </div>
                 </div>
             <h2>Experience</h2>
-                <h3>Communications Director</h3>
-                <h5>Furmata a Cappella @ University of Washington: September 2014-Present</h5>
+                <h3>INFO 200 Teaching Assistant</h3>
+                <h5>University of Washington: Spring 2016-Present under Dr. David Stearns and Dr. Wanda Pratt</h5>
                 <ul>
-                    <li>Manage and regularly post on social media websites (Facebook, YouTube, Instagram, etc.)</li>
+                    <li>Lead and facilitate weekly labs</li>
+                    <li>Grade assignments weekly and offer constructive feedback</li>
+                    <li>Provide guidance to prospective students, correspond regualarly both in persona and online</li>
+                    <li>Represent the Informatics major as a whole</li>
+                </ul>
+                <h3>PR and Social Media Coordinator of Furmata A Cappella</h3>
+            <h5><a href="furmata.com">Furmata a Cappella</a> @ University of Washington: September 2014-Present</h5>
+                <ul>
+                    <li>Manage and regularly post on social media websites (<a href="https://www.facebook.com/UW.Furmata/">Facebook</a>, YouTube, Instagram, etc.)</li>
                     <li>Coordinate recruitment and auditions</li>
                     <li>Coordinate all performances to be recorded and uploaded to YouTube</li>
                     <li>Design and print posters/flyers for everything Furmata related with Illustrator</li>
-                    <li>Manage design of Furmata website</li>
+                    <li>Manage design and content of Furmata website</li>
+                </ul>
+                <h3>Digital Marketing Intern at Amazon.com</h3>
+                <h5>Kindle Lifecycle Team at Amazon: July 2016-August 2016</h5>
+                <ul>
+                    <li>Migrated massive amounts of raw data into Tableau for easier use, navigation, and manipulation.
+                        I created a dashboard to allow the team to easily see their weekly reports.</li>
+                    <li>Worked with internal stakeholders to understand project environment and fulfill project needs.</li>
+                    <li>Created marketing segments to target specific audiences with personalized online & mobile advertisements.</li>
+                    <li>Off-loaded various tasks for the team, including collecting & updating reporting received from partners
+                        and building a marketing calendar for each Kindle market by researching key holidays and season trends</li>
+                </ul>
+                <ul>
+                    <li>Train new callers on office policies and use of Campus Call</li>
+                    <li>Attend Veteran Student Caller Committee meetings</li>
+                    <li>Cold-call alumni and friends of the university, updating contact information and renewing and acquiring donations</li>
+                    <li>Call for President's Club: high-pressure calls for donors who give $2,000 or more annually</li>
+                    <li>Excellent phone etiquette and communication skills</li>
                 </ul>
                 <h3>Student Caller Trainer</h3>
                 <h5>Office of Annual Giving @ University of Washington: January 2015-December 2015</h5>
@@ -207,14 +283,14 @@
                     <li>Manage class website and send weekly e-mails</li>
                     <li>Teach/advise freshman both in class and in person to help them transition into college</li>
                 </ul>
-                <h3>INFO 200 Teaching Assistant</h3>
-                <h5>University of Washington: Spring 2016 under Dr. David Stearns</h5>
+
 
             <h2>Awards and Honors</h2>
                 <h4><strong>Dean's List</strong> - University of Washington</h4>
-                <p>8 quarters out of 8</p>
-                <h4><strong>Golden Key International Honour Society Nominee</strong></h4>
-                <p>Part of top 15% of class</p>
+                <p>11 quarters out of 11</p>
+                <h4><strong>ICCA 2017 Finalist</strong></h4>
+                <p>With Furmata A Cappella, became the first group from WA state to advance to the final round of the
+                 International Competition of Collegiate A Cappella (ICCA).</p>
                 <h4><strong>Caller of the Quarter</strong> - Office of Annual Giving @ University of Washington</h4>
                 <p>Highest statistical perforamnce Fall 2014 in total money, total pledges, and total talk time.</p>
                 <h4><strong>Scholarships</strong></h4>
