--- a/templates/about.html
+++ b/templates/about.html
@@ -5,12 +5,15 @@
         <div id="aboutbox" class="col-md-8">
             <img src="img/profile.jpg" />
             <h1>Hi, I'm Kaitlin</h1>
-            <p id="about-content">I'm an Informatics student at the University of Washington in Seattle, WA.
-            I have a strong interest in UX and UI design. I love my major and am excited to enter an industry
-                that is constantly innovating: I hope to be part of projects that make a positive, social change.
-                I'm also slowly working on becoming a better programmer everyday: I think front-end web
-                development is fun.</p>
-            <p>My other interests include singing, group exercise, and being a closet nerd.</p>
+            <p id="about-content">I am a senior graduating with a <b>BS in Informatics</b>. I will be working in IT at
+                <b>Liberty Mutual starting September 2017</b>.
+                I love my major and am excited to enter an industry
+                that is constantly innovating. I hope to be part of projects that make a positive, social change.
+                <p>
+                During my time in the Informatics program, I have intentionally sought out a diverse set of coursework.
+            I have had particular interest in UX, front-end development, project management, and databases. </p>
+            <p>Aside from school, my other interests include singing (especially a cappella), group exercise,
+                and being a closet nerd. </p>
         </div>
         <div class="col-md-2">
         </div>
