updated resume and about

--- a/templates/resume.html
+++ b/templates/resume.html
@@ -12,7 +12,7 @@
                     <p>University of Washington, Seattle WA</p>
                     <p>Bachelor of Science in Informatics</p>
                     <p>Cumulative GPA: 3.75</p>
-                    <p>Expected graduation date: June 2017</p>
+                    <p>Graduation date: June 2017</p>
                 </div>
             <br>
             <p>Click to learn more. Course descriptions are from the University of Washington's course catalogue.</p>
